--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="yellow">#FFC801</color>
+    <color name="yellow_dark">#FBC02D</color>
 </resources>
